--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "lint": "eslint src/index.jsx src/**/**; exit 0"
+    "lint": "eslint src/index.jsx src/**/**; exit 0",
+    "lint-fix": "eslint src/index.jsx src/**/** --fix; exit 0"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/epicodus-lessons/react-help-queue-example#readme",
   "dependencies": {
+    "eslint": "^5.0.1",
+    "eslint-plugin-react": "^7.10.0",
     "npm": "^6.1.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
@@ -29,6 +32,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint-loader": "^2.0.0",
     "html-webpack-plugin": "^2.29.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "webpack": "^3.4.0",
