--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "npm": "^6.1.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.0.0",
+    "styled-jsx": "^2.2.7"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
