Add timer to tickets and functionality for posting ticket information

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "eslint": "^5.0.1",
     "eslint-plugin-react": "^7.10.0",
+    "moment": "^2.18.1",
     "npm": "^6.1.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.0.0",
-    "styled-jsx": "^2.2.7"
+    "styled-jsx": "^2.2.7",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
